--- a/dashboard_50.html
+++ b/dashboard_50.html
@@ -150,11 +150,12 @@
   const db = getFirestore(app);
   const kitsCollection = collection(db, "kits50Horas");
 
-  // *** 1. NOVA ABORDAGEM: Carregar a imagem do logo e converter para Base64 ***
   let logoBase64 = null;
   async function carregarLogoParaPDF() {
     try {
-      const response = await fetch('assets/logoPDF.png');
+      // *** CORREÇÃO APLICADA AQUI: Carregando logo de alta qualidade da internet ***
+      const response = await fetch('https://i.imgur.com/gYf4QZ3.png' );
+      
       if (!response.ok) throw new Error('Imagem do logo não encontrada.');
       const blob = await response.blob();
       const reader = new FileReader();
@@ -162,19 +163,17 @@
       return new Promise(resolve => {
         reader.onloadend = () => {
           logoBase64 = reader.result;
-          console.log("Logo para PDF carregado com sucesso.");
+          console.log("Logo de alta qualidade para PDF carregado com sucesso.");
           resolve();
         };
       });
     } catch (error) {
       console.error("Erro ao carregar o logo para o PDF:", error);
-      // O PDF será gerado sem logo se houver erro
     }
   }
 
   document.addEventListener("DOMContentLoaded", async () => {
     
-    // Carrega o logo assim que a página estiver pronta
     await carregarLogoParaPDF();
 
     if (localStorage.getItem("gestorLogado") !== "true") {
@@ -294,68 +293,65 @@
       adicionarEventosTabela();
     }
 
-    // *** 2. FUNÇÃO GERAR PDF MODIFICADA ***
     function gerarPDF(kit) {
-    const doc = new jsPDF();
+        const doc = new jsPDF();
 
-    // Adiciona o logo a partir da variável Base64
-    if (logoBase64) {
-        // *** A CORREÇÃO ESTÁ AQUI ***
-        // Adicionamos os parâmetros 'undefined' e 'NONE' para desativar a compressão
-        // e manter a qualidade máxima da imagem PNG.
-        doc.addImage(logoBase64, 'PNG', 15, 15, 45, 15, undefined, 'NONE');
-    } else {
-        console.warn("Logo não carregado, PDF será gerado sem ele.");
+        if (logoBase64) {
+            // Parâmetros para desativar a compressão e manter a qualidade
+            doc.addImage(logoBase64, 'PNG', 15, 15, 45, 15, undefined, 'NONE');
+        } else {
+            console.warn("Logo não carregado, PDF será gerado sem ele.");
+        }
+
+        doc.setFont('Helvetica', 'bold');
+        doc.setFontSize(12);
+
+        let y = 50;
+        const lineHeight = 12;
+
+        doc.text('CLIENTE:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text('AGRO DIVEL', 55, y);
+        y += lineHeight;
+
+        doc.setFont('Helvetica', 'bold');
+        doc.text('MODELO:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text(kit.modelo || '-', 55, y);
+        y += lineHeight;
+
+        doc.setFont('Helvetica', 'bold');
+        doc.text('CHASSI:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text(kit.chassi || '-', 55, y);
+        y += lineHeight;
+
+        doc.setFont('Helvetica', 'bold');
+        doc.text('DESCRIÇÃO:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text(kit.descricao || '-', 55, y);
+        y += lineHeight;
+
+        doc.setFont('Helvetica', 'bold');
+        doc.text('RESPONSÁVEL:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text(kit.quemEntregou || '-', 55, y);
+        y += lineHeight;
+
+        doc.setFont('Helvetica', 'bold');
+        doc.text('DATA:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text(formatarData(kit.dataEntrega) || '-', 55, y);
+        y += lineHeight;
+
+        doc.setFont('Helvetica', 'bold');
+        doc.text('ORDEM SERVIÇO:', 15, y);
+        doc.setFont('Helvetica', 'normal');
+        doc.text(kit.os || '-', 55, y);
+
+        doc.save(`Comprovante_${kit.chassi || 'kit'}.pdf`);
     }
 
-    doc.setFont('Helvetica', 'bold');
-    doc.setFontSize(12);
-
-    let y = 50;
-    const lineHeight = 12;
-
-    doc.text('CLIENTE:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text('AGRO DIVEL', 55, y);
-    y += lineHeight;
-
-    doc.setFont('Helvetica', 'bold');
-    doc.text('MODELO:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text(kit.modelo || '-', 55, y);
-    y += lineHeight;
-
-    doc.setFont('Helvetica', 'bold');
-    doc.text('CHASSI:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text(kit.chassi || '-', 55, y);
-    y += lineHeight;
-
-    doc.setFont('Helvetica', 'bold');
-    doc.text('DESCRIÇÃO:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text(kit.descricao || '-', 55, y);
-    y += lineHeight;
-
-    doc.setFont('Helvetica', 'bold');
-    doc.text('RESPONSÁVEL:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text(kit.quemEntregou || '-', 55, y);
-    y += lineHeight;
-
-    doc.setFont('Helvetica', 'bold');
-    doc.text('DATA:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text(formatarData(kit.dataEntrega) || '-', 55, y);
-    y += lineHeight;
-
-    doc.setFont('Helvetica', 'bold');
-    doc.text('ORDEM SERVIÇO:', 15, y);
-    doc.setFont('Helvetica', 'normal');
-    doc.text(kit.os || '-', 55, y);
-
-    doc.save(`Comprovante_${kit.chassi || 'kit'}.pdf`);
-}
     function adicionarEventosTabela() {
         tabelaBody.querySelectorAll('tr').forEach(row => {
             const id = row.dataset.id;
@@ -468,4 +464,3 @@
 
 </body>
 </html>
-
