--- a/dashboard_50.html
+++ b/dashboard_50.html
@@ -154,7 +154,7 @@
   async function carregarLogoParaPDF() {
     try {
       // *** CORREÇÃO APLICADA AQUI: Carregando logo de alta qualidade da internet ***
-      const response = await fetch('https://i.imgur.com/gYf4QZ3.png' );
+      const response = await fetch('https://imgur.com/a/msbXiW4' );
       
       if (!response.ok) throw new Error('Imagem do logo não encontrada.');
       const blob = await response.blob();
@@ -478,4 +478,5 @@
 
 </body>
 </html>
+
 
