--- a/dashboard_50.html
+++ b/dashboard_50.html
@@ -154,7 +154,7 @@
   async function carregarLogoParaPDF() {
     try {
       // *** CORREÇÃO APLICADA AQUI: Carregando logo de alta qualidade da internet ***
-      const response = await fetch('https://i.imgur.com/pOn7dUq.png' );
+      const response = await fetch('https://i.imgur.com/7UjN7Vn.png' );
       
       if (!response.ok) throw new Error('Imagem do logo não encontrada.');
       const blob = await response.blob();
@@ -478,6 +478,7 @@
 
 </body>
 </html>
+
 
 
 
