--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <i class="fa-solid fa-circle-exclamation"></i>
         <p>Insatisfação do Cliente</p>
       </a>
-      <a href="https://agro-divel360.vercel.app/Pages/Login.html" class="card">
+      <a href="https://agro-divel360.vercel.app/Pages/Login/Login.html" class="card">
         <i class="fa-solid fa-chart-column"></i>
         <p>Dashboard</p>
       </a>
@@ -469,6 +469,7 @@
 
 </body>
 </html>
+
 
 
 
