--- a/form_cadastroferramenta.html
+++ b/form_cadastroferramenta.html
@@ -166,158 +166,154 @@
     </div>
 
     <script>
-        // --- CONFIGURAÇÃO DO FIREBASE ---
-        const firebaseConfig = {
-            apiKey: "AIzaSyDcjPa9jXsCCu6lNc1fjVg4Bzz1toKWAGY",
-            authDomain: "agro-divel.firebaseapp.com",
-            projectId: "agro-divel",
-            storageBucket: "agro-divel.appspot.com",
-            messagingSenderId: "583977436505",
-            appId: "1:583977436505:web:3754ec029aebb3d9d67848"
-        };
+    // --- CONFIGURAÇÃO DO FIREBASE ---
+    const firebaseConfig = {
+        apiKey: "AIzaSyDcjPa9jXsCCu6lNc1fjVg4Bzz1toKWAGY",
+        authDomain: "agro-divel.firebaseapp.com",
+        projectId: "agro-divel",
+        // LINHA CORRIGIDA ABAIXO
+        storageBucket: "agro-divel.firebasestorage.app",
+        messagingSenderId: "583977436505",
+        appId: "1:583977436505:web:3754ec029aebb3d9d67848"
+    };
 
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-        const storage = firebase.storage();
-        const ferramentasCollection = db.collection('ferramentas');
-        const gruposCollection = db.collection('grupos');
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const storage = firebase.storage();
+    const ferramentasCollection = db.collection('ferramentas');
+    const gruposCollection = db.collection('grupos');
 
-        // --- ELEMENTOS DO DOM ---
-        const form = document.getElementById('form-ferramenta');
-        const fotoInput = document.getElementById('ferramenta-foto');
-        const previewImagem = document.getElementById('preview-imagem');
-        const statusMessage = document.getElementById('status-message');
-        const btnSalvar = document.getElementById('btn-salvar');
+    // --- ELEMENTOS DO DOM ---
+    const form = document.getElementById('form-ferramenta');
+    const fotoInput = document.getElementById('ferramenta-foto');
+    const previewImagem = document.getElementById('preview-imagem');
+    const statusMessage = document.getElementById('status-message');
+    const btnSalvar = document.getElementById('btn-salvar');
 
-        // --- FUNÇÕES ---
+    // --- FUNÇÕES ---
 
-        // Carrega os grupos do Firestore e preenche o select
-        async function carregarGrupos() {
-            const selectGrupo = document.getElementById('ferramenta-grupo');
-            selectGrupo.innerHTML = '<option value="">Selecione um Grupo</option>';
-            try {
-                const snapshot = await gruposCollection.orderBy('nome').get();
-                snapshot.forEach(doc => {
-                    const grupo = doc.data();
-                    const option = document.createElement('option');
-                    option.value = doc.id;
-                    option.textContent = grupo.nome;
-                    selectGrupo.appendChild(option);
-                });
-            } catch (error) {
-                console.error("Erro ao carregar grupos: ", error);
-                selectGrupo.innerHTML = '<option value="">Erro ao carregar</option>';
-            }
+    // Carrega os grupos do Firestore e preenche o select
+    async function carregarGrupos() {
+        const selectGrupo = document.getElementById('ferramenta-grupo');
+        selectGrupo.innerHTML = '<option value="">Selecione um Grupo</option>';
+        try {
+            const snapshot = await gruposCollection.orderBy('nome').get();
+            snapshot.forEach(doc => {
+                const grupo = doc.data();
+                const option = document.createElement('option');
+                option.value = doc.id;
+                option.textContent = grupo.nome;
+                selectGrupo.appendChild(option);
+            });
+        } catch (error) {
+            console.error("Erro ao carregar grupos: ", error);
+            selectGrupo.innerHTML = '<option value="">Erro ao carregar</option>';
         }
+    }
 
-        // Mostra uma mensagem de status (sucesso ou erro)
-        function mostrarStatus(mensagem, sucesso = true) {
-            statusMessage.textContent = mensagem;
-            statusMessage.className = `status-message ${sucesso ? 'success' : 'error'}`;
-            statusMessage.style.display = 'block';
+    // Mostra uma mensagem de status (sucesso ou erro)
+    function mostrarStatus(mensagem, sucesso = true) {
+        statusMessage.textContent = mensagem;
+        statusMessage.className = `status-message ${sucesso ? 'success' : 'error'}`;
+        statusMessage.style.display = 'block';
+    }
+
+    // Formata a localização
+    function formatarLocalizacao(input) {
+        const numeros = input.match(/\d+/g);
+        if (!numeros || numeros.length < 2) {
+            return input.toUpperCase();
         }
+        const prateleira = numeros[0];
+        const nivel = numeros[1];
+        return `${prateleira} A ${nivel}`;
+    }
 
-        // *** NOVA FUNÇÃO PARA FORMATAR A LOCALIZAÇÃO ***
-        function formatarLocalizacao(input) {
-            // Remove tudo que não for número e pega os dois primeiros grupos de números
-            const numeros = input.match(/\d+/g);
+    // --- EVENT LISTENERS ---
 
-            // Se não encontrar pelo menos 2 números, retorna o input original em maiúsculas
-            if (!numeros || numeros.length < 2) {
-                return input.toUpperCase();
+    // Preview da imagem ao selecionar um arquivo
+    fotoInput.addEventListener('change', (e) => {
+        const file = e.target.files[0];
+        if (file) {
+            const reader = new FileReader();
+            reader.onload = (event) => {
+                previewImagem.src = event.target.result;
+                previewImagem.style.display = 'block';
+            }
+            reader.readAsDataURL(file);
+        } else {
+            previewImagem.style.display = 'none';
+        }
+    });
+
+    // Envio do formulário
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        btnSalvar.disabled = true;
+        btnSalvar.innerHTML = '<i data-lucide="loader-2" class="spin"></i> Salvando...';
+        lucide.createIcons();
+
+        const fotoFile = fotoInput.files[0];
+        let fotoURL = '';
+
+        try {
+            if (fotoFile) {
+                const filePath = `ferramentas/${Date.now()}_${fotoFile.name}`;
+                const storageRef = storage.ref(filePath);
+                const uploadTask = await storageRef.put(fotoFile);
+                fotoURL = await uploadTask.ref.getDownloadURL();
             }
 
-            const prateleira = numeros[0];
-            const nivel = numeros[1];
+            const localizacaoInput = document.getElementById('ferramenta-localizacao').value;
+            const localizacaoFormatada = formatarLocalizacao(localizacaoInput);
 
-            // Monta a string no formato "PRATELEIRA A NÍVEL"
-            return `${prateleira} A ${nivel}`;
-        }
+            const dados = {
+                filial: document.getElementById('ferramenta-filial').value,
+                grupoId: document.getElementById('ferramenta-grupo').value,
+                codigo: document.getElementById('ferramenta-codigo').value.toUpperCase(),
+                descricao: document.getElementById('ferramenta-descricao').value.toUpperCase(),
+                localizacao: localizacaoFormatada,
+                quantidade: parseInt(document.getElementById('ferramenta-quantidade').value),
+                reparo: document.getElementById('ferramenta-reparo').checked,
+                fotoURL: fotoURL,
+                dataCriacao: new Date()
+            };
 
-        // --- EVENT LISTENERS ---
+            await ferramentasCollection.add(dados);
 
-        // Preview da imagem ao selecionar um arquivo
-        fotoInput.addEventListener('change', (e) => {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = (event) => {
-                    previewImagem.src = event.target.result;
-                    previewImagem.style.display = 'block';
-                }
-                reader.readAsDataURL(file);
-            } else {
-                previewImagem.style.display = 'none';
-            }
-        });
+            mostrarStatus('Ferramenta cadastrada com sucesso!', true);
+            form.reset();
+            previewImagem.style.display = 'none';
+            setTimeout(() => statusMessage.style.display = 'none', 4000);
 
-        // Envio do formulário
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            btnSalvar.disabled = true;
-            btnSalvar.innerHTML = '<i data-lucide="loader-2" class="spin"></i> Salvando...';
+        } catch (error) {
+            console.error("Erro ao salvar ferramenta: ", error);
+            mostrarStatus(`Erro ao salvar: ${error.message}`, false);
+        } finally {
+            btnSalvar.disabled = false;
+            btnSalvar.innerHTML = '<i data-lucide="save"></i> Salvar Ferramenta';
             lucide.createIcons();
+        }
+    });
 
-            const fotoFile = fotoInput.files[0];
-            let fotoURL = '';
+    // --- INICIALIZAÇÃO ---
+    document.addEventListener("DOMContentLoaded", () => {
+        lucide.createIcons();
+        carregarGrupos();
+    });
 
-            try {
-                if (fotoFile) {
-                    const filePath = `ferramentas/${Date.now()}_${fotoFile.name}`;
-                    const storageRef = storage.ref(filePath);
-                    const uploadTask = await storageRef.put(fotoFile);
-                    fotoURL = await uploadTask.ref.getDownloadURL();
-                }
+    // Adiciona animação de spin para o loader
+    const style = document.createElement('style');
+    style.innerHTML = `
+        @keyframes spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+        .spin { animation: spin 1s linear infinite; }
+    `;
+    document.head.appendChild(style);
+</script>
 
-                // *** APLICA A FORMATAÇÃO ANTES DE SALVAR ***
-                const localizacaoInput = document.getElementById('ferramenta-localizacao').value;
-                const localizacaoFormatada = formatarLocalizacao(localizacaoInput);
-
-                const dados = {
-                    filial: document.getElementById('ferramenta-filial').value,
-                    grupoId: document.getElementById('ferramenta-grupo').value,
-                    codigo: document.getElementById('ferramenta-codigo').value.toUpperCase(),
-                    descricao: document.getElementById('ferramenta-descricao').value.toUpperCase(),
-                    localizacao: localizacaoFormatada, // Salva o valor formatado
-                    quantidade: parseInt(document.getElementById('ferramenta-quantidade').value),
-                    reparo: document.getElementById('ferramenta-reparo').checked,
-                    fotoURL: fotoURL,
-                    dataCriacao: new Date()
-                };
-
-                await ferramentasCollection.add(dados);
-
-                mostrarStatus('Ferramenta cadastrada com sucesso!', true);
-                form.reset();
-                previewImagem.style.display = 'none';
-                setTimeout(() => statusMessage.style.display = 'none', 4000);
-
-            } catch (error) {
-                console.error("Erro ao salvar ferramenta: ", error);
-                mostrarStatus(`Erro ao salvar: ${error.message}`, false);
-            } finally {
-                btnSalvar.disabled = false;
-                btnSalvar.innerHTML = '<i data-lucide="save"></i> Salvar Ferramenta';
-                lucide.createIcons();
-            }
-        });
-
-        // --- INICIALIZAÇÃO ---
-        document.addEventListener("DOMContentLoaded", () => {
-            lucide.createIcons();
-            carregarGrupos();
-        });
-
-        // Adiciona animação de spin para o loader
-        const style = document.createElement('style');
-        style.innerHTML = `
-            @keyframes spin {
-                from { transform: rotate(0deg); }
-                to { transform: rotate(360deg); }
-            }
-            .spin { animation: spin 1s linear infinite; }
-        `;
-        document.head.appendChild(style);
-    </script>
 </body>
 </html>
+
