--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Agro Divel 360 - errado</title>
+  <title>Agro Divel 360</title>
 
   <!-- PWA Meta Tags -->
   <link rel="manifest" href="/manifest.json" />
@@ -478,6 +478,7 @@
 
 </body>
 </html>
+
 
 
 
