--- a/index.html
+++ b/index.html
@@ -18,138 +18,155 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #001439;
-      color: white;
-    }
-
-    .header {
-      padding: 20px;
-      text-align: center;
-      position: relative;
-    }
-
-    .header img {
-      width: 200px;
-    }
-
-    .notification-icon {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 22px;
-      cursor: pointer;
-      color: white;
-      background-color: #00bbf9;
-      border-radius: 50%;
-      padding: 4px;
-    }
-
-    @media (max-width: 600px) {
-      .notification-icon {
-        top: 15px;
-        right: 15px;
-      }
-    }
-
-    .notification-icon:hover {
-      color: #00bbf9;
-    }
-
-    #popup {
-      display:none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 300px;
-      background-color: #2c2f3f;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-      display: none;
-      z-index: 999;
-      text-align: center;
-    }
-
-    #popup-body p {
-      font-size: 16px;
-      margin: 10px 0;
-    }
-
-    #popup-body p.nps {
-      font-size: 36px;
-      font-weight: bold;
-      margin-top: 20px;
-    }
-
-    .fechar button {
-      background-color: #00bbf9;
-      border: none;
-      padding: 10px 20px;
-      color: white;
-      font-size: 14px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .fechar button:hover {
-      background-color: #0096c7;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 10px;
+      padding: 0;
       box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #0f3460 0%, #1a5490 100%);
+      min-height: 100vh;
+      color: white;
+    }
+
+    .main-container {
+      display: grid;
+      grid-template-columns: 0.8fr 1.2fr;
+      min-height: 100vh;
+      align-items: stretch;
+    }
+
+    .welcome-section {
+      background: linear-gradient(135deg, #0f3460 0%, #1a5490 100%);
+      padding: 50px 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .welcome-section::before {
+      content: '';
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 50%;
+      top: -80px;
+      right: -80px;
+    }
+
+    .welcome-section::after {
+      content: '';
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      background: rgba(255, 255, 255, 0.03);
+      border-radius: 50%;
+      bottom: -40px;
+      left: -40px;
+    }
+
+    .welcome-content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+    }
+
+    .welcome-logo {
+      margin-bottom: 30px;
+    }
+
+    .welcome-logo img {
+      width: 160px;
+      filter: brightness(0) invert(1);
+    }
+
+    .welcome-text h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 12px;
+      letter-spacing: -0.5px;
+    }
+
+    .welcome-text p {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.8);
+      line-height: 1.5;
+      max-width: 250px;
+    }
+
+    .content-section {
+      background: white;
+      padding: 40px 35px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      overflow-y: auto;
+    }
+
+    .content-header {
+      margin-bottom: 30px;
+    }
+
+    .content-header h1 {
+      font-size: 28px;
+      font-weight: 700;
+      color: #0f3460;
+      margin-bottom: 8px;
+    }
+
+    .content-header p {
+      font-size: 14px;
+      color: #666;
+      font-style: italic;
     }
 
     .dashboard {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 20px;
-      gap: 20px;
-    }
-
-    .frase-italico {
-      font-family: 'Poppins', sans-serif;
-      font-style: italic;
-      font-weight: 300;
-      font-size: 100%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 16px;
     }
 
     .card {
-      background-color: #ffffff;
+      background: white;
       border-radius: 12px;
-      padding: 40px;
-      width: 150px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      padding: 20px;
       text-align: center;
-      transition: all 0.3s ease;
-    }
-
-    .card:hover {
-      background-color: #3a3d55;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       cursor: pointer;
-      transform: translateY(-4px);
+      transition: all 0.2s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 130px;
+      border: 2px solid #f0f0f0;
     }
 
-    .card i {
-      font-size: 32px;
+    .card:active {
+      transform: scale(0.97);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    }
+
+    .card-icon {
+      font-size: 40px;
       margin-bottom: 10px;
-      color: #001439;
+      color: #0f3460;
+      display: block;
     }
 
     .card p {
-      margin-top: 10px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #001439;
+      margin: 0;
+      font-size: 13px;
+      font-weight: 600;
+      color: #0f3460;
+      line-height: 1.3;
     }
 
     a, a:visited {
@@ -157,27 +174,193 @@
       text-decoration: none;
     }
 
-    @media (max-width: 600px) {
+    .notification-icon {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      font-size: 22px;
+      cursor: pointer;
+      color: white;
+      background-color: rgba(52, 152, 219, 0.9);
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      z-index: 100;
+      transition: all 0.2s ease;
+    }
+
+    .notification-icon:active {
+      transform: scale(0.95);
+    }
+
+    #popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+      max-width: 380px;
+      background: white;
+      padding: 35px;
+      border-radius: 16px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+      z-index: 1000;
+      text-align: center;
+      animation: popupSlideIn 0.3s ease;
+    }
+
+    @keyframes popupSlideIn {
+      from {
+        opacity: 0;
+        transform: translate(-50%, -55%);
+      }
+      to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    #popup-body p {
+      font-size: 16px;
+      margin: 10px 0;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    #popup-body p.nps {
+      font-size: 50px;
+      font-weight: 700;
+      margin-top: 25px;
+      color: #0f3460;
+    }
+
+    .fechar button {
+      background: linear-gradient(135deg, #3498db 0%, #2980b9 100%);
+      border: none;
+      padding: 12px 30px;
+      color: white;
+      font-size: 16px;
+      font-weight: 600;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: all 0.2s ease;
+    }
+
+    .fechar button:active {
+      transform: scale(0.98);
+    }
+
+    @media (max-width: 1024px) {
+      .main-container {
+        grid-template-columns: 1fr;
+      }
+
+      .welcome-section {
+        padding: 35px 25px;
+        min-height: auto;
+      }
+
+      .content-section {
+        padding: 30px 25px;
+      }
+
+      .welcome-logo img {
+        width: 140px;
+      }
+
+      .welcome-text h2 {
+        font-size: 28px;
+      }
+
+      .content-header h1 {
+        font-size: 24px;
+      }
+
       .dashboard {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
-        justify-items: center; /* Alinha os cards no centro da célula */
+        gap: 14px;
       }
 
       .card {
-        width: 90%;
-        max-width: 160px;
-        padding: 20px 10px;
-        margin-left: -10px;
+        padding: 18px;
+        min-height: 120px;
       }
 
-      .container {
-        max-width: 100%;
-        padding: 10px;
+      .card-icon {
+        font-size: 36px;
       }
-   }
 
+      .card p {
+        font-size: 12px;
+      }
+    }
+
+    @media (max-width: 640px) {
+      body {
+        padding: 0;
+      }
+
+      .welcome-section {
+        padding: 30px 20px;
+      }
+
+      .content-section {
+        padding: 25px 20px;
+      }
+
+      .welcome-logo img {
+        width: 120px;
+      }
+
+      .welcome-text h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+      }
+
+      .welcome-text p {
+        font-size: 13px;
+      }
+
+      .content-header h1 {
+        font-size: 22px;
+      }
+
+      .content-header p {
+        font-size: 13px;
+      }
+
+      .dashboard {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+      }
+
+      .card {
+        padding: 16px;
+        min-height: 110px;
+        border-radius: 10px;
+      }
+
+      .card-icon {
+        font-size: 34px;
+        margin-bottom: 8px;
+      }
+
+      .card p {
+        font-size: 11.5px;
+      }
+
+      .notification-icon {
+        width: 44px;
+        height: 44px;
+        font-size: 20px;
+      }
+    }
 
   </style>
 </head>
@@ -185,12 +368,28 @@
 
   <button id="instalarApp" style="display: none;">Instalar AgroDivel 360</button>
 
-  <div class="container">
-    <div class="header">
-      <img src="/assets/images/logo.png" alt="Logo Agro Divel" />
-      <i class="fas fa-circle-info notification-icon" onclick="abrirPopup()"></i>
-      <h1 class="frase-italico">Selecione o setor e conecte o cliente à solução ideal.</h1>
+  <div class="main-container">
+    <!-- Seção Bem-vindo -->
+    <div class="welcome-section">
+      <div class="welcome-content">
+        <div class="welcome-logo">
+          <img src="/assets/images/logo.png" alt="Logo Agro Divel" />
+        </div>
+        <div class="welcome-text">
+          <h2>Bem-vindo</h2>
+          <p>Acesse as soluções de gestão do Agro Divel 360 com suas credenciais de login.</p>
+        </div>
+      </div>
     </div>
+
+    <!-- Seção de Conteúdo -->
+    <div class="content-section">
+      <div class="content-header">
+        <h1>Seus Formulários</h1>
+        <p>Selecione o setor e conecte o cliente à solução ideal</p>
+      </div>
+
+      <i class="fas fa-circle-info notification-icon" onclick="abrirPopup()"></i>
 
     <div id="popup">
       <div id="popup-body">
@@ -203,45 +402,46 @@
 
     <div class="dashboard">
       <a href="/Pages/Formularios/FormularioIndex/form-pecas.html" class="card">
-        <i class="fas fa-cogs"></i>
+        <i class="fas fa-cogs card-icon"></i>
         <p>Peças</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-servicos.html" class="card">
-        <i class="fas fa-wrench"></i>
+        <i class="fas fa-wrench card-icon"></i>
         <p>Serviços</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-PLM.html" class="card">
-        <i class="fa-solid fa-satellite"></i>
+        <i class="fa-solid fa-satellite card-icon"></i>
         <p>PLM</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-comercial.html" class="card">
-        <i class="fas fa-handshake"></i>
+        <i class="fas fa-handshake card-icon"></i>
         <p>Comercial</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-consorcio.html" class="card">
-        <i class="fas fa-piggy-bank"></i>
+        <i class="fas fa-piggy-bank card-icon"></i>
         <p>Consórcio</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-seguro.html" class="card">
-        <i class="fa-solid fa-cloud"></i>
+        <i class="fa-solid fa-cloud card-icon"></i>
         <p>Seguro</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-planodemanutencao.html" class="card">
-        <i class="fa-solid fa-file"></i>
+        <i class="fa-solid fa-file card-icon"></i>
         <p>Plano de Manutenção</p>
       </a>
       <a href="/Pages/Formularios/PromocaoAtivas.html" class="card">
-        <i class="fa-solid fa-tags"></i>
+        <i class="fa-solid fa-tags card-icon"></i>
         <p>Promoções Ativas</p>
       </a>
       <a href="/Pages/Formularios/FormularioIndex/form-insatisfacao.html" class="card">
-        <i class="fa-solid fa-circle-exclamation"></i>
-        <p>Insatisfação do Cliente</p>
+        <i class="fa-solid fa-circle-exclamation card-icon"></i>
+        <p>Insatisfação</p>
       </a>
       <a href="/Pages/Login/Login.html" class="card">
-        <i class="fa-solid fa-chart-column"></i>
+        <i class="fa-solid fa-chart-column card-icon"></i>
         <p>Dashboard</p>
       </a>
+    </div>
     </div>
   </div>
 
