--- a/Pages/PlanejamentoAnual/GerenciaPlanejamento.html
+++ b/Pages/PlanejamentoAnual/GerenciaPlanejamento.html
@@ -28,6 +28,9 @@
                     <button type="button" class="btn-novo-grupo-header" id="btn-novo-grupo" title="Adicionar Novo Grupo">
                         <i class='bx bx-plus'></i> Novo Grupo
                     </button>
+                    <button type="button" class="btn-mover-massa-header" id="btn-mover-massa" title="Mover contas em massa" onclick="window.moverEmMassa()">
+                        <i class='bx bx-share'></i> Mover em Massa
+                    </button>
                     <button type="button" class="btn-salvar-header" id="btn-salvar" title="Salvar no Firebase">
                         <i class='bx bx-save'></i> Salvar
                     </button>
