--- a/Pages/Cadastros/CadastrarGestores.html
+++ b/Pages/Cadastros/CadastrarGestores.html
@@ -259,6 +259,7 @@
             'dash-PLM': ['admin', 'diretoria', 'servicos'],
             'dash-planos-manutencao': ['admin', 'diretoria', 'servicos'],
             'ctrl-PlanosVigentes': ['admin', 'diretoria', 'servicos'],
+            'ctrl-OportunidadeFabrica': ['admin', 'diretoria', 'servicos'],
             'ctrl-MaquinaParada': ['admin', 'diretoria', 'servicos'],
             'ctrl-Telemetria': ['admin', 'diretoria', 'servicos'],
             'ctrl-Tempario': ['admin', 'diretoria', 'servicos', 'pecas'],
@@ -267,7 +268,6 @@
             'lubri-AnaliseLubrificantes': ['admin', 'diretoria', 'pecas'],
             
             // --- PLANEJAMENTO ---
-            'plan-Anual': ['admin', 'diretoria'],
             'plan-Gerenciar': ['admin', 'diretoria'],
             'plan-Permissoes': ['admin', 'diretoria'],
             'plan-Preencher': ['admin', 'diretoria'],
@@ -298,12 +298,12 @@
             'dash-PLM': 'Dashboard PLM',
             'dash-planos-manutencao': 'Planos de Manutenção',
             'ctrl-PlanosVigentes': 'Planos Vigentes',
+            'ctrl-OportunidadeFabrica': 'Oportunidade da Fábrica',
             'ctrl-MaquinaParada': 'Máquina Parada',
             'ctrl-Tempario': 'Tempario',
             'ctrl-Telemetria': 'Telemetria',
             'ctrl-Prim': 'Controle Prim',
             'lubri-AnaliseLubrificantes': 'Análise de Lubrificantes',
-            'plan-Anual': 'Planejamento Anual',
             'plan-Gerenciar': 'Gerenciar Planejamento',
             'plan-Permissoes': 'Gerenciar Permissões de Planejamento',
             'plan-Preencher': 'Preencher Planejamento',
