--- a/Pages/index.html
+++ b/Pages/index.html
@@ -224,7 +224,7 @@
   <div class="maintenance-container">
     <div class="maintenance-header">
       <div class="logo-container">
-        <img src="/assets/images/Logo.png" alt="Agro Divel 360">
+        <img src="/assets/images/logo.png" alt="Agro Divel 360">
       </div>
       <div class="maintenance-icon">
         <i class="fas fa-tools"></i>
