--- a/Pages/index.html
+++ b/Pages/index.html
@@ -438,8 +438,8 @@
         <p>Insatisfação</p>
       </a>
       <a href="/Pages/Login/Login.html" class="card">
-        <i class="fa-solid fa-chart-column card-icon"></i>
-        <p>Dashboard</p>
+        <i class="fa-solid fa-arrow-right-to-bracket card-icon"></i>
+        <p>Acessar Sistema</p>
       </a>
     </div>
     </div>
